// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="text-base font-semibold select-none first:mr-3 last:ml-3 text-theme-secondary-700 dark:text-theme-secondary-200"
      type="button"
    >
      Option A
    </button>
    <label
      class="flex items-center h-4 cursor-pointer"
    >
      <input
        class="sr-only toggle-input"
        type="checkbox"
      />
      <div
        class="inline-flex relative rounded-full toggle-handle bg-theme-primary-100 h-[5px] w-[30px] dark:bg-theme-secondary-800"
      >
        <span
          class="absolute top-1/2 w-4 h-4 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-primary-600 handle-inner"
        />
      </div>
    </label>
    <button
      class="text-base font-semibold select-none first:mr-3 last:ml-3 text-theme-secondary-500 dark:text-theme-secondary-700"
      type="button"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="text-base font-semibold cursor-default select-none first:mr-3 last:ml-3 text-theme-secondary-700 dark:text-theme-secondary-200"
      type="button"
    >
      Option A
    </button>
    <label
      class="flex items-center h-4 cursor-not-allowed"
    >
      <input
        class="sr-only toggle-input"
        disabled=""
        type="checkbox"
      />
      <div
        class="inline-flex relative rounded-full toggle-handle bg-theme-primary-100 h-[5px] w-[30px] dark:bg-theme-secondary-800"
      >
        <span
          class="absolute top-1/2 w-4 h-4 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
      </div>
    </label>
    <button
      class="text-base font-semibold cursor-default select-none first:mr-3 last:ml-3 text-theme-secondary-500 dark:text-theme-secondary-700"
      type="button"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="text-lg font-semibold select-none first:mr-4 last:ml-4 text-theme-secondary-700 dark:text-theme-secondary-200"
      type="button"
    >
      Option A
    </button>
    <label
      class="flex items-center h-4 cursor-pointer"
    >
      <input
        class="sr-only toggle-input"
        type="checkbox"
      />
      <div
        class="inline-flex relative rounded-full toggle-handle bg-theme-primary-100 h-[5px] w-[30px] dark:bg-theme-secondary-800"
      >
        <span
          class="absolute top-1/2 w-4 h-4 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-primary-600 handle-inner"
        />
      </div>
    </label>
    <button
      class="text-lg font-semibold select-none first:mr-4 last:ml-4 text-theme-secondary-500 dark:text-theme-secondary-700"
      type="button"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="text-sm font-semibold select-none first:mr-2 last:ml-2 text-theme-secondary-700 dark:text-theme-secondary-200"
      type="button"
    >
      Option A
    </button>
    <label
      class="flex items-center h-3 cursor-pointer"
    >
      <input
        class="sr-only toggle-input"
        type="checkbox"
      />
      <div
        class="inline-flex relative w-6 rounded-full toggle-handle bg-theme-primary-100 h-[5px] dark:bg-theme-secondary-800"
      >
        <span
          class="absolute top-1/2 w-3 h-3 rounded-full transition-all duration-200 ease-in-out -translate-y-1/2 bg-theme-primary-600 handle-inner"
        />
      </div>
    </label>
    <button
      class="text-sm font-semibold select-none first:mr-2 last:ml-2 text-theme-secondary-500 dark:text-theme-secondary-700"
      type="button"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;
